<?xml version="1.0"?>
<package format="2">

    <name>tts</name>
    <version>1.0.0</version>
    <description>text to speech ROS node.</description>

    <author email="vista17@student.sdu.dk">Victor Melbye Staven</author>
    <maintainer email="vista17@student.sdu.dk">Victor Melbye Staven</maintainer>

    <license>TODO</license>

    <!-- <url type="website">https://github.com/HRIC-FC</url> -->
    <!-- <url type="repository">https://github.com/HRIC-FC/hric-system</url> -->

    <buildtool_depend>catkin</buildtool_depend>

    <!-- depend = build_depend + build_export_depend + exec_depend -->
    <depend>roslib</depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

</package>